[package]
name = "rust-corosync-tests"
version = "0.1.0"
authors = ["Christine Caulfield <ccaulfie@redhat.com>"]
edition = "2018"

[dependencies]
rust-corosync = { path = ".." }

[build-dependencies]
pkg-config = "0.3"

[[bin]]
name = "cpg-test"
test = false
bench = false

[[bin]]
name = "quorum-test"
test = false
bench = false

[[bin]]
name = "votequorum-test"
test = false
bench = false

[[bin]]
name = "cfg-test"
test = false
bench = false

[[bin]]
name = "cmap-test"
test = false
bench = false
